--- a/instagram-dio-master/index.html
+++ b/instagram-dio-master/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Instagram</title>
@@ -10,19 +9,19 @@
 <body>
     <div class="instagram-wrapper">
         <div class="instagram-phone">
-            <img src="./Imagens/instagram-celular.png" alt="photo-celular">
+            <img src="./img/instagram-celular.png" alt="celular">
         </div>
         <div class="instagram-continue">
             <div class="group">
-                <img src="./Imagens/instagram-logo.png" class="instagram-logo" alt="instagram-logo">
+                <img src="./img/instagram-logo.png" class="instagram-logo" alt="instagram logo">
                 <div class="profile-photo">
-                    <img src="./Imagens/perfil-instagram.png" alt="foto do perfil-instagram">
+                    <img src="./img/perfil-instagram.jpg" alt="foto de perfil">
                 </div>
-                <a href="#" class="instagram-login">Continue como guiono</a>
-                <a href="#" class="instagram-logout">Remover Conta</a>
+                <a href="#" class="instagram-login">Continue como sprucegabriela</a>
+                <a href="#" class="instagram-logout">Remover conta</a>
             </div>
             <div class="group">
-                <p class="not-account">Não é guiono?</p>
+                <p class="not-account">Não é sprucegabriela?</p>
                 <p class="not-account">
                     <span class="link-blue">Alternar contas</span>
                     ou
